methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:5: error: not found: value ramasseBiscuit
  ramasseBiscuit();
  ^