methods.slug.SlugHunting.scala.code
def hunt() {
  
if (estSurBiscuit==true) {
  ramasseBiscuit();
  return;
}
  
while (isFacingTrail==true) {
  baisseBrosse();	
  avance();
  leveBrosse();
}
  
while(isFacingTrail==false) {
  gauche();
  hunt();
}  
  

  
}


def isFacingTrail():Boolean = {
    if (estFaceMur==true) {
      return false;
    }
  
  avance();
  if (getCouleurSol==Color.green) {
    recule();
    return true;
  } else { 
    recule();
    return false; 
  }
}
